Added temporary icon stolen from the interwebs. Added badge icon, set version number, and prepped for a build.

--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ body {
 	font-weight: bold;
 	color: #FFF;
 	padding: 5px;
+	font-variant: small-caps;
+}
+
+.resolved .summary a {
+	text-decoration: line-through;
 }
 
 .priority-immediate {
